--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="CSS/main.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    <!-- My Theme -->
     <link href='https://fonts.googleapis.com/css?family=Londrina+Sketch|Londrina+Solid' rel='stylesheet' type='text/css'>
-    <script src="JS/app.js"></script>
-    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <link rel="stylesheet" href="CSS/main.css">
     <title>Jampot.Design</title>
 </head>
+
 <body>
     <nav class="top-nav">
-    <img class="small-logo" src="images/logo-black.png">
+        <img class="small-logo" src="images/logo-black.png">
         <ul class="content">
             <li> Contact Us</li>
             <li> About </li>
@@ -18,11 +23,18 @@
         </ul>
     </nav>
     <section class="main-container">
-       <div class="first-container">
-           <img class="main-logo" src="images/logo.png">
-           <h1 class="main-heading">JAM POT</h1>
-       </div>
-        <div class="second-container"> <h2>Website Design Specialists.</h2></div>
+        <div class="first-container">
+            <img class="main-logo" src="images/logo.png" width="100px" height="125px">
+            <h1 class="main-heading">JAM POT</h1>
+        </div>
+        <div class="second-container">
+            <h2>Website Design Specialists.</h2></div>
     </section>
+    <!-- external scripts -->
+    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="JS/app.js"></script>
 </body>
+
 </html>
