--- a/index.html
+++ b/index.html
@@ -14,20 +14,38 @@
 </head>
 
 <body>
-    <nav class="top-nav">
-        <img class="small-logo" src="images/logo-black.png">
-        <ul class="content">
-            <li> Contact Us</li>
-            <li> About </li>
-            <li> Portfolio </li>
-        </ul>
-    </nav>
-    <section class="main-container">
-        <div class="first-container">
-            <img class="main-logo" src="images/logo.png" width="100px" height="125px">
-            <h1 class="main-heading">JAM POT</h1>
+    <nav class="navbar navbar-default" role="navigation" id="nav">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-col">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar-col">
+                <div class="col-lg-1 col-xs-1"></div>
+                <img class="col-lg-1 col-xs-1" src="images/logo-black.png" width="25px" height="50px">
+                <div class="col-lg-6 col-xs-6"></div>
+                <ul class="nav navbar-nav col-lg-3 col-xs-4">
+                    <li> Contact </li>
+                    <li> About </li>
+                    <li> Portfolio </li>
+                </ul>
+                <div class="col-lg-1"></div>
+            </div>
         </div>
-        <div class="second-container">
+    </nav>
+    <!-- main section  -->
+    <section class="container" id="welcome-main">
+        <div class="row">
+            <div class="col-lg-5"></div>
+            <img class="col-lg-2" src="images/logo.png" width="100px" height="125px">
+            <div class="col-lg-5"></div>
+        </div>
+        <div class="row">
+            <h1 class="col-lg-12">JAM POT</h1>
+        </div>
+        <div class="container" id="welcome-sec">
             <h2>Website Design Specialists.</h2></div>
     </section>
     <!-- external scripts -->
