--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default" role="navigation" id="nav">
+    <nav class="navbar navbar-default my-nav " role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-col">
                 <span class="sr-only">Toggle navigation</span>
@@ -24,7 +24,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbar-col">
                 <div class="col-lg-1 col-xs-1"></div>
-                <img class="col-lg-1 col-xs-1" src="images/logo-black.png" width="25px" height="50px">
+                <div class="col-lg-1"><img src="images/logo-black.png" width="25px" height="50px"></div>
                 <div class="col-lg-6 col-xs-6"></div>
                 <ul class="nav navbar-nav col-lg-3 col-xs-4">
                     <li> Contact </li>
@@ -36,16 +36,16 @@
         </div>
     </nav>
     <!-- main section  -->
-    <section class="container" id="welcome-main">
+    <section class="container welcome-main">
         <div class="row">
             <div class="col-lg-5"></div>
-            <img class="col-lg-2" src="images/logo.png" width="100px" height="125px">
+            <img src="images/logo.png" width="100px" height="125px">
             <div class="col-lg-5"></div>
         </div>
         <div class="row">
             <h1 class="col-lg-12">JAM POT</h1>
         </div>
-        <div class="container" id="welcome-sec">
+        <div class="container welcome-sec">
             <h2>Website Design Specialists.</h2></div>
     </section>
     <!-- external scripts -->
