Setting up pages and footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,9 +27,9 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-col">
                 <div class="row">
-                    <div class="col-lg-2 col-md-2 col-xs-2"><img src="images/logo-black.png" width="40px" height="50px"></div>
-                    <div class="col-lg-6 col-md-4 col-xs-3"></div>
-                    <ul class="nav navbar-nav my-contents col-lg-4 col-md-6 col-xs-7">
+                    <div class="col-lg-2 col-xs-2"><img src="images/logo-black.png" width="40px" height="50px"></div>
+                    <div class="col-lg-5 col-xs-4"></div>
+                    <ul class="nav navbar-nav my-contents col-lg-5 col-xs-6">
                         <li><a href="index.html"> Home </a></li>
                         <li><a href="contact.html"> Contact </a></li>
                         <li><a href="about.html"> About </a></li>
@@ -40,7 +40,19 @@
             </div>
         </nav>
     </header>
-
+    <!-- MAIN SECTION  -->
+    <section class="container portfolio-main">
+        <div class="row">
+            <div class="col-lg-5"></div>
+            <div class="col-lg-2"></div>
+            <div class="col-lg-5"></div>
+        </div>
+        <div class="row">
+            <h3 class="col-lg-12">Portfolio</h3>
+        </div>
+        <div class="container portfolio-sec">
+            <h4>Some of our wonderful examples</h4></div>
+    </section>
 
     <!-- external scripts -->
     <script src="http://code.jquery.com/jquery.min.js"></script>
