--- a/contact.html
+++ b/contact.html
@@ -1,48 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-        <!-- My Theme -->
-        <link href='https://fonts.googleapis.com/css?family=Londrina+Sketch|Londrina+Solid' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="CSS/main.css">
-        <title>Jampot.Design</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    <!-- My Theme -->
+    <link href='https://fonts.googleapis.com/css?family=Londrina+Sketch|Londrina+Solid' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="CSS/main.css">
+    <title>Jampot.Design</title>
+</head>
 
-    <body>
-        <!-- HEADER / NAV BAR  -->
-        <header class="container">
-            <nav class="navbar navbar-default navbar-fixed-top my-nav " role="navigation">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-col" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+<body>
+    <!-- HEADER / NAV BAR  -->
+    <header class="container">
+        <nav class="navbar navbar-default navbar-fixed-top my-nav " role="navigation">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-col" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-col">
+                <div class="row">
+                    <div class="col-lg-2 col-xs-2"><img src="images/logo-black.png" width="40px" height="50px"></div>
+                    <div class="col-lg-5 col-xs-4"></div>
+                    <ul class="nav navbar-nav my-contents col-lg-5 col-xs-6">
+                        <li><a href="index.html"> Home </a></li>
+                        <li><a href="contact.html"> Contact </a></li>
+                        <li><a href="about.html"> About </a></li>
+                        <li><a href="portfolio.html"> Portolio </a></li>
+                    </ul>
                 </div>
-                <div class="collapse navbar-collapse" id="navbar-col">
-                    <div class="row">
-                        <div class="col-lg-2 col-md-2 col-xs-2"><img src="images/logo-black.png" width="40px" height="50px"></div>
-                        <div class="col-lg-6 col-md-4 col-xs-3"></div>
-                        <ul class="nav navbar-nav my-contents col-lg-4 col-md-6 col-xs-7">
-                            <li><a href="index.html"> Home </a></li>
-                            <li><a href="contact.html"> Contact </a></li>
-                            <li><a href="about.html"> About </a></li>
-                            <li><a href="portfolio.html"> Portolio </a></li>
-                        </ul>
-                    </div>
-                </div>
-                </div>
-            </nav>
-        </header>
+            </div>
+            </div>
+        </nav>
+    </header>
+    <!-- MAIN SECTION  -->
+    <section class="container contact-main">
+        <div class="row">
+            <div class="col-lg-5"></div>
+            <div class="col-lg-2"></div>
+            <div class="col-lg-5"></div>
+        </div>
+        <div class="row">
+            <h3 class="col-lg-12">Contact Us</h3>
+        </div>
+        <div class="container contact-sec">
+            <h4>Use our handy form below to get in touch. </h4>
+            <p>We would love to get in touch and chat more about website plans.</p></div>
+    </section>
     <!-- external scripts -->
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="JS/app.js"></script>
-    </body>
+</body>
