--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.css">
     <!-- My Theme -->
     <link href='https://fonts.googleapis.com/css?family=Londrina+Sketch|Londrina+Solid' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="CSS/main.css">
@@ -27,9 +28,9 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-col">
                 <div class="row">
-                    <div class="col-lg-2 col-md-2 col-xs-2"><img src="images/logo-black.png" width="40px" height="50px"></div>
-                    <div class="col-lg-6 col-md-4 col-xs-3"></div>
-                    <ul class="nav navbar-nav my-contents col-lg-4 col-md-6 col-xs-7">
+                    <div class="col-lg-2 col-xs-2"><img src="images/logo-black.png" width="40px" height="50px"></div>
+                    <div class="col-lg-5 col-xs-4"></div>
+                    <ul class="nav navbar-nav my-contents col-lg-5 col-xs-6">
                         <li><a href="index.html"> Home </a></li>
                         <li><a href="contact.html"> Contact </a></li>
                         <li><a href="about.html"> About </a></li>
@@ -53,6 +54,13 @@
         <div class="container welcome-sec">
             <h2>Website Design Specialists.</h2></div>
     </section>
+    <footer class="container-fluid text-center">
+        <div class="row">
+            <p>Contact us anytime via Twitter or Email</p>
+            <a href="https://twitter.com/jampot_design"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
+            <i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
+        </div>
+    </footer>
     <!-- external scripts -->
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
