--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-col">
                 <div class="row">
-                    <div class="col-lg-2 col-xs-2"><img src="images/logo-black.png" width="40px" height="50px"></div>
-                    <div class="col-lg-5 col-xs-4"></div>
-                    <ul class="nav navbar-nav my-contents col-lg-5 col-xs-6">
-                        <li><a href="index.html"> Home </a></li>
+                    <div class="col-lg-2 col-xs-2">
+                        <a href="index.html"><img src="images/logo-black.png" width="40px" height="50px"></a>
+                    </div>
+                    <div class="col-lg-6 col-xs-5"></div>
+                    <ul class="nav navbar-nav my-contents col-lg-4 col-xs-5">
                         <li><a href="contact.html"> Contact </a></li>
                         <li><a href="about.html"> About </a></li>
                         <li><a href="portfolio.html"> Portolio </a></li>
