--- a/index.html
+++ b/index.html
@@ -15,51 +15,53 @@
 </head>
 
 <body>
-    <!-- HEADER / NAV BAR  -->
-    <header class="container">
-        <nav class="navbar navbar-default navbar-fixed-top my-nav " role="navigation">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-col" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-col">
-                <div class="row">
-                    <div class="col-lg-2 col-xs-2">
-                        <a href="index.html"><img src="images/logo-black.png" width="40px" height="50px"></a>
-                    </div>
-                    <div class="col-lg-6 col-xs-5"></div>
-                    <ul class="nav navbar-nav my-contents col-lg-4 col-xs-5">
-                        <li><a href="contact.html"> Contact </a></li>
-                        <li><a href="about.html"> About </a></li>
-                        <li><a href="portfolio.html"> Portolio </a></li>
-                    </ul>
+    <main class="page-wrap">
+        <!-- HEADER / NAV BAR  -->
+        <header class="container">
+            <nav class="navbar navbar-default navbar-fixed-top my-nav " role="navigation">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-col" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                 </div>
+                <div class="collapse navbar-collapse" id="navbar-col">
+                    <div class="row">
+                        <div class="col-lg-2 col-xs-2">
+                            <a href="index.html"><img src="images/logo-black.png" width="40px" height="50px"></a>
+                        </div>
+                        <div class="col-lg-6 col-xs-5"></div>
+                        <ul class="nav navbar-nav my-contents col-lg-4 col-xs-5">
+                            <li><a href="contact.html"> Contact </a></li>
+                            <li><a href="about.html"> About </a></li>
+                            <li><a href="portfolio.html"> Portolio </a></li>
+                        </ul>
+                    </div>
+                </div>
+                </div>
+            </nav>
+        </header>
+        <!-- MAIN SECTION  -->
+        <section class="container welcome-main">
+            <div class="row">
+                <div class="col-lg-5"></div>
+                <div class="col-lg-2"><img src="images/logo.png" width="100px" height="125px"></div>
+                <div class="col-lg-5"></div>
             </div>
+            <div class="row">
+                <h1 class="col-lg-12">JAM POT</h1>
             </div>
-        </nav>
-    </header>
-    <!-- MAIN SECTION  -->
-    <section class="container welcome-main">
-        <div class="row">
-            <div class="col-lg-5"></div>
-            <div class="col-lg-2"><img src="images/logo.png" width="100px" height="125px"></div>
-            <div class="col-lg-5"></div>
-        </div>
-        <div class="row">
-            <h1 class="col-lg-12">JAM POT</h1>
-        </div>
-        <div class="container welcome-sec">
-            <h2>Website Design Specialists.</h2></div>
-    </section>
+            <div class="container welcome-sec">
+                <h2>Website Design Specialists.</h2></div>
+        </section>
+    </main>
     <footer class="container-fluid text-center">
         <div class="row">
             <p>Contact us anytime via Twitter or Email</p>
-            <a href="https://twitter.com/jampot_design"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
-            <i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
+            <a href="https://twitter.com/jampot_design"><i class="fa fa-twitter-square fa-3x my-twitter" aria-hidden="true"></i></a>
+            <i class="fa fa-envelope fa-3x my-email" aria-hidden="true"></i>
         </div>
     </footer>
     <!-- external scripts -->
