--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,9 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-col">
                 <div class="row">
-                    <div class="col-lg-2 col-xs-2"><a href="index.html"><img src="images/logo-black.png" width="40px" height="50px"></a></div>
+                    <div class="col-lg-2 col-xs-2">
+                        <a href="index.html"><img src="images/logo-black.png" width="40px" height="50px"></a>
+                    </div>
                     <div class="col-lg-5 col-xs-4"></div>
                     <ul class="nav navbar-nav my-contents col-lg-5 col-xs-6">
                         <li><a href="index.html"> Home </a></li>
@@ -52,8 +54,46 @@
         </div>
         <div class="container contact-sec">
             <h4>Use our handy form below to get in touch. </h4>
-            <p>We would love to get in touch and chat more about website plans.</p></div>
+            <p>We would love to get in touch and chat more about website plans.</p>
+        </div>
     </section>
+    <div class="container">
+        <div class="row">
+            <form role="form" action="" method="post">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8">
+                    <div class="well well-sm"><strong><i class="glyphicon glyphicon-ok form-control-feedback"></i> Required Field</strong></div>
+                    <div class="form-group">
+                        <label for="InputName">Your Name</label>
+                        <div class="input-group">
+                            <input type="text" class="form-control" name="InputName" id="InputName" placeholder="Enter Name" required>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+                    </div>
+                    <div class="form-group">
+                        <label for="InputEmail">Your Email</label>
+                        <div class="input-group">
+                            <input type="email" class="form-control" id="InputEmail" name="InputEmail" placeholder="Enter Email" required>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+                    </div>
+                    <div class="form-group">
+                        <label for="InputMessage">Message</label>
+                        <div class="input-group">
+                            <textarea name="InputMessage" id="InputMessage" class="form-control" rows="5" required></textarea>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+                    </div>
+                    <div class="form-group">
+                        <label for="InputReal">What is 4+3? (Quick Bot Check)</label>
+                        <div class="input-group">
+                            <input type="text" class="form-control" name="InputReal" id="InputReal" required>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+                    </div>
+                    <input type="submit" name="submit" id="submit" value="Submit" class="btn btn-info pull-right">
+                </div>
+                <div class="col-lg-2"></div>
+            </form>
+        </div>
+
+    </div>
     <!-- external scripts -->
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
