--- a/contact.html
+++ b/contact.html
@@ -15,85 +15,94 @@
 
 <body>
     <!-- HEADER / NAV BAR  -->
-    <header class="container">
-        <nav class="navbar navbar-default navbar-fixed-top my-nav " role="navigation">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-col" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-col">
-                <div class="row">
-                    <div class="col-lg-2 col-xs-2">
-                        <a href="index.html"><img src="images/logo-black.png" width="40px" height="50px"></a>
-                    </div>
-                    <div class="col-lg-5 col-xs-4"></div>
-                    <ul class="nav navbar-nav my-contents col-lg-5 col-xs-6">
-                        <li><a href="index.html"> Home </a></li>
-                        <li><a href="contact.html"> Contact </a></li>
-                        <li><a href="about.html"> About </a></li>
-                        <li><a href="portfolio.html"> Portolio </a></li>
-                    </ul>
+    <main class="page-wrap me-contact-page">
+        <header class="container">
+            <nav class="navbar navbar-default navbar-fixed-top my-nav " role="navigation">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-col" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                 </div>
-            </div>
-            </div>
-        </nav>
-    </header>
-    <!-- MAIN SECTION  -->
-    <section class="container contact-main">
-        <div class="row">
-            <div class="col-lg-5"></div>
-            <div class="col-lg-2"></div>
-            <div class="col-lg-5"></div>
-        </div>
-        <div class="row">
-            <h3 class="col-lg-12">Contact Us</h3>
-        </div>
-        <div class="container contact-sec">
-            <h4>Use our handy form below to get in touch. </h4>
-            <p>We would love to get in touch and chat more about website plans.</p>
-        </div>
-    </section>
-    <div class="container">
-        <div class="row">
-            <form role="form" action="" method="post">
-                <div class="col-lg-2"></div>
-                <div class="col-lg-8">
-                    <div class="well well-sm"><strong><i class="glyphicon glyphicon-ok form-control-feedback"></i> Required Field</strong></div>
-                    <div class="form-group">
-                        <label for="InputName">Your Name</label>
-                        <div class="input-group">
-                            <input type="text" class="form-control" name="InputName" id="InputName" placeholder="Enter Name" required>
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+                <div class="collapse navbar-collapse" id="navbar-col">
+                    <div class="row">
+                        <div class="col-lg-2 col-xs-2">
+                            <a href="index.html"><img src="images/logo-black.png" width="40px" height="50px"></a>
+                        </div>
+                        <div class="col-lg-5 col-xs-4"></div>
+                        <ul class="nav navbar-nav my-contents col-lg-5 col-xs-6">
+                            <li><a href="index.html"> Home </a></li>
+                            <li><a href="contact.html"> Contact </a></li>
+                            <li><a href="about.html"> About </a></li>
+                            <li><a href="portfolio.html"> Portolio </a></li>
+                        </ul>
                     </div>
-                    <div class="form-group">
-                        <label for="InputEmail">Your Email</label>
-                        <div class="input-group">
-                            <input type="email" class="form-control" id="InputEmail" name="InputEmail" placeholder="Enter Email" required>
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
-                    </div>
-                    <div class="form-group">
-                        <label for="InputMessage">Message</label>
-                        <div class="input-group">
-                            <textarea name="InputMessage" id="InputMessage" class="form-control" rows="5" required></textarea>
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
-                    </div>
-                    <div class="form-group">
-                        <label for="InputReal">What is 4+3? (Quick Bot Check)</label>
-                        <div class="input-group">
-                            <input type="text" class="form-control" name="InputReal" id="InputReal" required>
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
-                    </div>
-                    <input type="submit" name="submit" id="submit" value="Submit" class="btn btn-info pull-right">
                 </div>
+                </div>
+            </nav>
+        </header>
+        <!-- MAIN SECTION  -->
+        <section class="container contact-main">
+            <div class="row">
+                <div class="col-lg-5"></div>
                 <div class="col-lg-2"></div>
-            </form>
-        </div>
+                <div class="col-lg-5"></div>
+            </div>
+            <div class="row">
+                <h3 class="col-lg-12">Contact Us</h3>
+            </div>
+            <div class="container contact-sec">
+                <h4>Use our handy form below to get in touch. </h4>
+                <p>We would love to get in touch and chat more about website plans.</p>
+            </div>
+        </section>
+        <div class="container">
+            <div class="row">
+                <form role="form" action="" method="post">
+                    <div class="col-lg-2"></div>
+                    <div class="col-lg-8">
+                        <div class="well well-sm"><strong><i class="glyphicon glyphicon-ok form-control-feedback"></i> Required Field</strong></div>
+                        <div class="form-group">
+                            <label for="InputName">Your Name</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" name="InputName" id="InputName" placeholder="Enter Name" required>
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="InputEmail">Your Email</label>
+                            <div class="input-group">
+                                <input type="email" class="form-control" id="InputEmail" name="InputEmail" placeholder="Enter Email" required>
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="InputMessage">Message</label>
+                            <div class="input-group">
+                                <textarea name="InputMessage" id="InputMessage" class="form-control" rows="5" required></textarea>
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="InputReal">What is 4+3? (Quick Bot Check)</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" name="InputReal" id="InputReal" required>
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+                        </div>
+                        <input type="submit" name="submit" id="submit" value="Submit" class="btn btn-info pull-right">
+                    </div>
+                    <div class="col-lg-2"></div>
+                </form>
+            </div>
 
-    </div>
+        </div>
+    </main>
+    <footer class="container-fluid text-center">
+        <div class="row">
+            <p>Contact us anytime via Twitter or Email</p>
+            <a href="https://twitter.com/jampot_design"><i class="fa fa-twitter-square fa-3x my-twitter" aria-hidden="true"></i></a>
+            <i class="fa fa-envelope fa-3x my-email" aria-hidden="true"></i>
+        </div>
+    </footer>
     <!-- external scripts -->
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
