--- a/portfolio.html
+++ b/portfolio.html
@@ -15,44 +15,56 @@
 
 <body>
     <!-- HEADER / NAV BAR  -->
-    <header class="container">
-        <nav class="navbar navbar-default navbar-fixed-top my-nav " role="navigation">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-col" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-col">
-                <div class="row">
-                    <div class="col-lg-2 col-xs-2"><a href="index.html"><img src="images/logo-black.png" width="40px" height="50px"></a></div>
-                    <div class="col-lg-5 col-xs-4"></div>
-                    <ul class="nav navbar-nav my-contents col-lg-5 col-xs-6">
-                        <li><a href="index.html"> Home </a></li>
-                        <li><a href="contact.html"> Contact </a></li>
-                        <li><a href="about.html"> About </a></li>
-                        <li><a href="portfolio.html"> Portolio </a></li>
-                    </ul>
+    <main class="page-wrap me-portfolio-page">
+        <header class="container">
+            <nav class="navbar navbar-default navbar-fixed-top my-nav " role="navigation">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-col" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                 </div>
+                <div class="collapse navbar-collapse" id="navbar-col">
+                    <div class="row">
+                        <div class="col-lg-2 col-xs-2">
+                            <a href="index.html"><img src="images/logo-black.png" width="40px" height="50px"></a>
+                        </div>
+                        <div class="col-lg-5 col-xs-4"></div>
+                        <ul class="nav navbar-nav my-contents col-lg-5 col-xs-6">
+                            <li><a href="index.html"> Home </a></li>
+                            <li><a href="contact.html"> Contact </a></li>
+                            <li><a href="about.html"> About </a></li>
+                            <li><a href="portfolio.html"> Portolio </a></li>
+                        </ul>
+                    </div>
+                </div>
+                </div>
+            </nav>
+        </header>
+        <!-- MAIN SECTION  -->
+        <section class="container portfolio-main">
+            <div class="row">
+                <div class="col-lg-5"></div>
+                <div class="col-lg-2"></div>
+                <div class="col-lg-5"></div>
             </div>
+            <div class="row">
+                <h3 class="col-lg-12">Portfolio</h3>
             </div>
-        </nav>
-    </header>
-    <!-- MAIN SECTION  -->
-    <section class="container portfolio-main">
+            <div class="container portfolio-sec">
+                <h4>Some of our wonderful examples</h4></div>
+        </section>
+
+    </main>
+    <footer class="container-fluid text-center">
         <div class="row">
-            <div class="col-lg-5"></div>
-            <div class="col-lg-2"></div>
-            <div class="col-lg-5"></div>
+            <p>Contact us anytime via Twitter or Email</p>
+            <a href="https://twitter.com/jampot_design"><i class="fa fa-twitter-square fa-3x my-twitter" aria-hidden="true"></i></a>
+            <i class="fa fa-envelope fa-3x my-email" aria-hidden="true"></i>
         </div>
-        <div class="row">
-            <h3 class="col-lg-12">Portfolio</h3>
-        </div>
-        <div class="container portfolio-sec">
-            <h4>Some of our wonderful examples</h4></div>
-    </section>
+    </footer>
 
     <!-- external scripts -->
     <script src="http://code.jquery.com/jquery.min.js"></script>
