Footer on all pages

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.css">
     <!-- My Theme -->
     <link href='https://fonts.googleapis.com/css?family=Londrina+Sketch|Londrina+Solid' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="CSS/main.css">
@@ -55,7 +56,10 @@
                 <h3 class="col-lg-12">About Us</h3>
             </div>
             <div class="container about-sec">
-                <h4>Some of our wonderful examples</h4></div>
+                <h4>What is JamPot about?</h4></div>
+            <p>JamPot is the brain child of Simon, the lead designer and owner. After many years of starting up businesses Simon learnt code to help with the soring cost of development.</p>
+            <p>JamPot comes at development from a totally different angle, because we have business knowledge but we also understand deadlines.</p>
+            <p>If you are interested in learning more about what JamPot can do for you get in <a class="my-links" href="contact.html">touch</a>.</p>
         </section>
     </main>
     <footer class="container-fluid text-center">
