--- a/contact.html
+++ b/contact.html
@@ -61,40 +61,28 @@
         </section>
         <div class="container">
             <div class="row">
-                <form role="form" action="" method="post">
-                    <div class="col-lg-2"></div>
-                    <div class="col-lg-8">
-                        <div class="well well-sm"><strong><i class="glyphicon glyphicon-ok form-control-feedback"></i> Required Field</strong></div>
+                <div class="col-xs-12">
+                    <form action="" method="">
                         <div class="form-group">
-                            <label for="InputName">Your Name</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control" name="InputName" id="InputName" placeholder="Enter Name" required>
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+                            <label for="name"> Your Name </label>
+                            <input type="name" class="form-control" id="name">
                         </div>
                         <div class="form-group">
-                            <label for="InputEmail">Your Email</label>
-                            <div class="input-group">
-                                <input type="email" class="form-control" id="InputEmail" name="InputEmail" placeholder="Enter Email" required>
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+                            <label for="email"> Email Address </label>
+                            <input type="email" class="form-control" id="email">
                         </div>
                         <div class="form-group">
-                            <label for="InputMessage">Message</label>
-                            <div class="input-group">
-                                <textarea name="InputMessage" id="InputMessage" class="form-control" rows="5" required></textarea>
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+                            <label for="message">Tell us a little more about your project</label>
+                            <input type="message" class="form-control" id="message">
                         </div>
                         <div class="form-group">
-                            <label for="InputReal">What is 4+3? (Quick Bot Check)</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control" name="InputReal" id="InputReal" required>
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
+                            <input type="submit" class="btn btn-default" id="submit">
                         </div>
-                        <input type="submit" name="submit" id="submit" value="Submit" class="btn btn-info pull-right">
-                    </div>
-                    <div class="col-lg-2"></div>
-                </form>
-            </div>
 
+
+
+                </div>
+            </div>
         </div>
     </main>
     <footer class="container-fluid text-center">
